# byplayer_cp_library

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  TODO.md  changelog.md  libraries.md  makefile  readme.md
.github/workflows/: c-cpp.yml  ci-cpp.yml  ci-gcc.yml
bcpl/: dijkstra.hpp
docs/: annotated.html  classes.html  custom.css  dir_63178887d0e215f38099531042297c71.html  dir_63178887d0e215f38099531042297c71.js  dir_63178887d0e215f38099531042297c71_dep.map  dir_63178887d0e215f38099531042297c71_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html
docs/d0/d20/: readme_8md.html
docs/d0/d74/: structbcpl_1_1dijkstra_1_1_node_greater.html  structbcpl_1_1dijkstra_1_1_node_greater.js
docs/d1/d48/: utility_8hpp__incl.map  utility_8hpp__incl.md5
docs/d1/d4e/: utility_8hpp.html  utility_8hpp.js  utility_8hpp_source.html
docs/d1/dd1/: fenwicktree_8hpp.html  fenwicktree_8hpp_source.html
docs/d2/d5b/: structbcpl_1_1dijkstra_1_1_node-members.html
docs/d2/dd2/: structbcpl_1_1dijkstra_1_1_node_greater-members.html
docs/d3/d11/: dijkstra_8hpp.html  dijkstra_8hpp.js  dijkstra_8hpp_source.html
docs/d3/de2/: md_changelog.html
docs/d3/dfd/: fenwicktree_8hpp__incl.map  fenwicktree_8hpp__incl.md5
docs/d4/d3c/: changelog_8md.html
docs/d4/d78/: math_8hpp.html  math_8hpp.js  math_8hpp_source.html
docs/d5/da2/: namespacebcpl.html  namespacebcpl.js  namespacebcpl_a30d32666413ae2d69a9a9a32c751a48d_cgraph.map  namespacebcpl_a30d32666413ae2d69a9a9a32c751a48d_cgraph.md5  namespacebcpl_a3955c6a9122d5b6461cf2bcc7457a5c0_cgraph.map  namespacebcpl_a3955c6a9122d5b6461cf2bcc7457a5c0_cgraph.md5  namespacebcpl_a58c3ca1e46633af7c7fb85a65b28fe62_icgraph.map  namespacebcpl_a58c3ca1e46633af7c7fb85a65b28fe62_icgraph.md5  namespacebcpl_a676f38aa58b7120f705c153a99564601_icgraph.map  namespacebcpl_a676f38aa58b7120f705c153a99564601_icgraph.md5  namespacebcpl_a83f16b4a677ee672a5f297a9e73fdffe_cgraph.map  namespacebcpl_ad5701c5b505560e0a723ae77add60825_cgraph.map  namespacebcpl_ad5701c5b505560e0a723ae77add60825_cgraph.md5  namespacebcpl_ad5701c5b505560e0a723ae77add60825_icgraph.map  namespacebcpl_ad5701c5b505560e0a723ae77add60825_icgraph.md5  namespacebcpl_ae837e23b2b92782aab5245fde42e3108_cgraph.md5  namespacebcpl_af6d1ac2a68a6e6958d999935344e2b06_cgraph.map  namespacebcpl_af6d1ac2a68a6e6958d999935344e2b06_cgraph.md5  namespacebcpl_af6d1ac2a68a6e6958d999935344e2b06_icgraph.map  namespacebcpl_af6d1ac2a68a6e6958d999935344e2b06_icgraph.md5  namespacebcpl_afb5340978e49756eb1f959b86f5252bd_cgraph.map  namespacebcpl_afb5340978e49756eb1f959b86f5252bd_cgraph.md5  namespacebcpl_afb5340978e49756eb1f959b86f5252bd_icgraph.map  namespacebcpl_afb5340978e49756eb1f959b86f5252bd_icgraph.md5
docs/d5/dfc/: modint_8hpp.html  modint_8hpp_source.html
docs/d6/d85/: modint_8hpp__incl.map  modint_8hpp__incl.md5
docs/d7/d26/: combination_8hpp__incl.map  combination_8hpp__incl.md5
docs/d8/d06/: math_8hpp__incl.map  math_8hpp__incl.md5
docs/d8/dba/: dijkstra_8hpp__incl.md5
docs/d9/d0e/: structbcpl_1_1dijkstra-members.html
docs/da/d7b/: debug_8hpp.html  debug_8hpp.js  debug_8hpp_source.html  structbcpl_1_1dijkstra_1_1_node__coll__graph.map  structbcpl_1_1dijkstra_1_1_node__coll__graph.md5
docs/db/da8/: libraries_8md.html
docs/dc/d3b/: structbcpl_1_1dijkstra.html  structbcpl_1_1dijkstra.js  structbcpl_1_1dijkstra_a638345eaaa00ea891487a736fe6711c9_cgraph.md5  structbcpl_1_1dijkstra_a6cc7b72146c8967d4345cfa1cc6fc17f_icgraph.map  structbcpl_1_1dijkstra_a6cc7b72146c8967d4345cfa1cc6fc17f_icgraph.md5  structbcpl_1_1dijkstra_abe70952bcfa2c7d54f3009b67ef66347_cgraph.map  structbcpl_1_1dijkstra_abe70952bcfa2c7d54f3009b67ef66347_cgraph.md5  structbcpl_1_1dijkstra_ae635e9e38ac026ce53659a93b63accf1_icgraph.map  structbcpl_1_1dijkstra_ae635e9e38ac026ce53659a93b63accf1_icgraph.md5
docs/dc/dac/: debug_8hpp__incl.map  debug_8hpp__incl.md5
docs/dd/d38/: namespacebcpl__prv.html  namespacebcpl__prv_a845ff8efd1166293074998e319d11d13_cgraph.map  namespacebcpl__prv_a845ff8efd1166293074998e319d11d13_cgraph.md5  namespacebcpl__prv_a845ff8efd1166293074998e319d11d13_icgraph.map  namespacebcpl__prv_a845ff8efd1166293074998e319d11d13_icgraph.md5
docs/dd/de3/: types_8hpp.html  types_8hpp.js  types_8hpp_source.html
docs/de/d1f/: structbcpl_1_1dijkstra_1_1_node.html  structbcpl_1_1dijkstra_1_1_node.js
docs/de/d3a/: types_8hpp__incl.map  types_8hpp__incl.md5
docs/df/d00/: combination_8hpp.html  combination_8hpp.js  combination_8hpp_source.html
docs/html/: annotated_dup.js  classes.html  dir_63178887d0e215f38099531042297c71.html  dir_63178887d0e215f38099531042297c71.js  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions_func.html  functions_vars.html  index.html  navtreedata.js  navtreeindex0.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  (+19 more)
doxygen/: header.html
git_hooks/: pre-commit
include/bcpl/: combination  combination.hpp  debug  debug.hpp  dijkstra  dijkstra.hpp  fenwicktree  fenwicktree.hpp  math  math.hpp  modint  modint.hpp  types  types.hpp  utility  utility.hpp
test/unittest/: .gitignore  CMakeLists.txt  build_gtest.sh  docker-compose.yml  makefile  readme.md  test_all.sh
test/unittest/include/: gtest_include.hpp
test/unittest/src/: combination_all_test.cpp  combination_test.cpp  dijkstra_test.cpp  math_test.cpp
(+29 files in other folders)
